// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ajv - validateWithSchema should return undefined when no error reported 1`] = `
Object {
  "errors": Object {},
  "values": Object {},
}
`;

exports[`ajvResolver should get errors 1`] = `
Object {
  "errors": Object {
    "email": Object {
      "message": "should be string",
      "type": "type",
    },
    "firstName": Object {
      "message": "should have required property 'firstName'",
      "type": "required",
    },
    "options": Object {
      "message": "should be equal to one of the allowed values",
      "type": "enum",
    },
  },
  "values": Object {},
}
`;

exports[`ajvResolver should localize errors 1`] = `
Object {
  "errors": Object {
    "email": Object {
      "message": "muss das erforderliche Attribut email enthalten",
      "type": "required",
    },
    "firstName": Object {
      "message": "muss sein: string",
      "type": "type",
    },
    "options": Object {
      "message": "muss einem der vorgegebenen Werte entsprechen",
      "type": "enum",
    },
  },
  "values": Object {},
}
`;
